# py_beam_template

./: .gitignore  CustomBatchBeams.csv  README.md  main.py  pyproject.toml
docs/: How_to_write_def_beam_table_file.jpn.md
examples/: beam_control_program.51.rnd.jsonl  beam_control_program.bidirectional51.seq.jsonl  fib_rnd_conf.json  lin_rnd_conf.json  lin_seq.conf.json
examples/beam_table_conf/: beam_pattern.lin51.jsonl
examples/run_conf/: lin_rnd_conf.json  lin_seq.conf.json
lib/: defs_beam_sweep_op.py  defs_beam_sweeping.py  defs_beams.py  defs_beamsweep_op.py  make_beam_csvfile.py  make_beam_file.py
pytypes/: type_beam.py  unit.py
tests/: test_create_beam_control_table.py  test_def_const_beams.py  test_defs_beam_sweeping.py  test_defs_beams.py  test_defs_beamsweep_op.py  test_make_beam_csvfile.py  test_parse_args.py
tests/conf/fib_rnd/: beam_control_program.64.rnd.jsonl  beam_pattern.fib64.jsonl  fib_rnd_conf.json
tests/conf/lin_rnd/: beam_pattern.lin51.jsonl  lin_rnd_conf.json
tests/conf/lin_seq/: lin_seq.conf.json
tools/: arg_parser.py  create_beamtable_csv.py  json2csv.py  measdata_analysis.ipynb  parser.py  softmodem_management.py
tools/default_val/: beam_control_program.sample.jsonl  beam_pattern.sample.jsonl  ctrl_config.default.json
